@@ -1,3 +1,6 @@
+2008-04-28  Maximilien Cuony
+    * New inline system
+
 2008-04-26  Maximilien Cuony
     *  FS#51
 
